- Scatter Series: Added "xy_data_format" #246
- Button:         Added "enabled"
- log:            Added "logger"
- log_debug:      Added "logger"
- log_error:      Added "logger"
- log_info:       Added "logger"
- log_warning:    Added "logger"
- clear_log:      Added "logger"
- get_log_level:  Added "logger"
- set_log_level:  Added "logger"
- input widgets:  Added "readonly" #254

Fixes:
- Listbox:        Fixed default "num_items"
- Combobox:       Fixed hidden name issue #258
- File Dialog:    Fixed issue with typed filenames not returning #257

-----------------------------------------------------------------------
 VERSION 0.4.3 (10/01/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.3

New Keywords:
- Text:              Added "source"
- Text:              Added "default_value"
- Collapsing Header: Added "open_on_double_click"
- Collapsing Header: Added "open_on_arrow"
- Collapsing Header: Added "leaf"
- Collapsing Header: Added "bullet"
- Tree Node:         Added "open_on_double_click"
- Tree Node:         Added "open_on_arrow"
- Tree Node:         Added "leaf"
- Tree Node:         Added "bullet"
- child:             Added "autosize_x"
- child:             Added "autosize_y"
- child:             Added "no_scrollbar"
- child:             Added "horizontal_scrollbar"
- child:             Added "menubar"
- input_float:       Added "step"
- input_float:       Added "step_fast"

Changes:
- Text:           Text is wrapped by default now.

Fixes:
- Collapsing Header: fixed "default_open" which did not work before
- Tree Node: fixed "default_open" which did not work before
- Stub File: added notation in definition for keyword only arguments

-----------------------------------------------------------------------
 VERSION 0.4.2 (9/30/2020)
-----------------------------------------------------------------------
